add: addition functions

--- a/workshop2_Income&Expenses/index.html
+++ b/workshop2_Income&Expenses/index.html
@@ -25,7 +25,7 @@
         </div>
         <h3>history</h3>
         <ul class="list-history" id="list-history">
-            <li class="minus">
+            <!-- <li class="minus">
                 fixed car
                 <span>- 400</span>
                 <button class="delete-btn">x</button>
@@ -39,7 +39,7 @@
                 groceries
                 <span>- 500</span>
                 <button class="delete-btn">x</button>
-            </li>
+            </li> -->
         </ul>
         <h3>add</h3>
         <form action="" id="form">
